2.ordersystem/k8s/k8s-ordersystem/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
    namespace: hyunsub
spec:
    replicas: 1
    selector:
        matchLabels:
            app: redis
    template:
        metadata:
            labels:
                app: redis
        spec:
            containers:
                - name: redis
                  image: redis
                  ports:
                      - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
    # 이 이름을 가지고 스프링 서버에서 Redis 서비스로 호출을 하기 때문에 중요하다.
    name: redis-service
    namespace: hyunsub
spec:
    ports:
        - port: 6379
          targetPort: 6379
    selector:
        app: redis
